Home page link Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/test.html
+++ b/test.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+
+	<title>uConnect Home Page</title>
 </head>
 <body>
-chantal is an egg- tolu
-lsnfvns;d
+	<h1>
+		<a href="file:///C:/Users/Chantal/Desktop/quarterspinners/test.html">uConnect
+		</a>
+	</h1>
 </body>
 </html>
