--- a/test.html
+++ b/test.html
@@ -9,5 +9,27 @@
 		<a href="file:///C:/Users/Chantal/Desktop/quarterspinners/test.html">uConnect
 		</a>
 	</h1>
+	<style>
+	ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline;
+}
+</style>
+</head>
+<body>
+
+<ul>
+  <li><a href="#insert sign up page link here">Sign Up</a></li>
+  <li><a href="#insert features page link here">Features</a></li>
+  <li><a href="#insert team page link here">Team</a></li>
+  <li><a href="#insert pricing page here">Pricing</a></li>
+  <li><a href="#insert home page link here(?)">Home</a></li>
+</ul>
+
 </body>
 </html>
