--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 	<h1>
 		<a href="file:///C:/Users/Chantal/Desktop/quarterspinners/test.html">uConnect
 		</a>
-		Chris git hub works perfectly
+		We have links on test!!! :)
 	</h1>
 	<style>
 	ul {
