Basic CSS code for the signup sheet No battery animation yet Haven't hooked up signup CSS code to main HTML code yet "Sign me up!" Button does not actually direct the user anywhere Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.html
+++ b/signup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="">
+<!-- <link rel="stylesheet" type="text/css" href=""> -->
 	<title>uConnect Home Page</title>
 </head>
 <body>
 	<h1>
-		<a href="file:///C:/Users/Chantal/Desktop/quarterspinners/test.html">uConnect
+		<a href="file:///C:/Users/Chantal/Desktop/quarterspinners/#insert home page link here">uConnect
 		</a>
 		
 	</h1>
@@ -46,12 +46,36 @@ li a:hover {
 <body>
 
 <ul>
-  <li><a href="#insert sign up page link here">Sign Up</a></li>
+  <li><a href="file:///C:/Users/CHantal/Desktop/quarterspinners/signup.html">Sign Up</a></li>
   <li><a href="#insert features page link here">Features</a></li>
   <li><a href="#insert pricing page link here">Pricing</a></li>
   <li><a href="#insert team page link here">Team</a></li>
   <li><a href="#insert home page link here">Home</a></li>
 </ul>
+<!-- Copy all of the above into the new HTML pages. This is the top navi bar. Write your code for the desired page function under here or facebook msg me how this works-->
+
+<div class="form">
+  <form id="contactform">
+  <p class ="contact"><label for="name">Name: </label></p>
+  <input id="name" name="name" placeholder="First and last name" required="" tabindex="1" type="text">
+
+  <p class="contact"><label for="email">Email: </label></p>
+  <input id="email" name="email" placeholder="example@domain.com" required="" type="email">
+
+  <input class="button" name="submit" id="submit" tabindex="5" value="Sign me up!" type="submit">
+  </form>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
