--- a/topbar.html
+++ b/topbar.html
@@ -46,7 +46,7 @@ li a:hover {
 <body>
 
 <ul>
-  <li><a href="#insert sign up page link here">Sign Up</a></li>
+  <li><a href="file:///C:/Users/CHantal/Desktop/quarterspinners/signup.html">Sign Up</a></li>
   <li><a href="#insert features page link here">Features</a></li>
   <li><a href="#insert pricing page link here">Pricing</a></li>
   <li><a href="#insert team page link here">Team</a></li>
