--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- <link rel="stylesheet" type="text/css" href=""> -->
+<link rel="stylesheet" type="text/css" href="signup.css">
 	<title>uConnect Home Page</title>
 </head>
 <body>
@@ -62,7 +62,7 @@ li a:hover {
   <p class="contact"><label for="email">Email: </label></p>
   <input id="email" name="email" placeholder="example@domain.com" required="" type="email">
 
-  <input class="button" name="submit" id="submit" tabindex="5" value="Sign me up!" type="submit">
+  <input class="buttom" name="submit" id="submit" tabindex="5" value="Sign me up!" type="submit">
   </form>
   </div>
 
