Slowly inching the signup form closer to the center Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.html
+++ b/signup.html
@@ -59,8 +59,17 @@ li a:hover {
 <div class="wrapper">
   <h2>Register For An Account</h2>
   <br>
-
-  <form class="form" method="post" action="yourpage.html">
+  <style>
+  .center {
+    margin: auto;
+    width: 60%;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}
+</style>
+<div class="center">
+  <p>
+  <form class="form" method="post" action="#insert target link for registration here">
     <input type="text" class="name" placeholder="Name">
     <div>
       <p class="name-help">Please enter your first and last name.</p>
@@ -71,6 +80,8 @@ li a:hover {
     </div>
     <input type="submit" class="submit" value="Register">
   </form>
+  </p>
+  </div>
 </div>
 
 
