Centered it but not quite correctly Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.html
+++ b/signup.html
@@ -56,8 +56,9 @@ li a:hover {
 
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link href='signup.css'>
 <div class="wrapper">
-  <h2>Register For An Account</h2>
+  <center><h2>Register For An Account</h2></center>
   <br>
   <style>
   .center {
@@ -68,6 +69,7 @@ li a:hover {
 }
 </style>
 <div class="center">
+<center>
   <p>
   <form class="form" method="post" action="#insert target link for registration here">
     <input type="text" class="name" placeholder="Name">
@@ -81,6 +83,7 @@ li a:hover {
     <input type="submit" class="submit" value="Register">
   </form>
   </p>
+  </center>
   </div>
 </div>
 
