Cleaned up some more Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.html
+++ b/signup.html
@@ -58,7 +58,9 @@ li a:hover {
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href='signup.css'>
 <div class="wrapper">
-  <center><h2>Register For An Account</h2></center>
+  <center>
+  <h2>Register For An Account</h2>
+  </center>
   <br>
   <style>
   .center {
