Finally aligned it properly... good job me! Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.html
+++ b/signup.html
@@ -57,7 +57,7 @@ li a:hover {
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href='signup.css'>
-<div class="wrapper">
+<div class="wrapper" style="margin: 0 auto">
   <center>
   <h2>Register For An Account</h2>
   </center>
