TEst test 123 Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.html
+++ b/signup.html
@@ -60,6 +60,8 @@ li a:hover {
 <div class="wrapper" style="margin: 0 auto">
   <center>
   <h2>Register For An Account</h2>
+  <img src="battery(2).png">
+
   </center>
   <br>
   <style>
