Changed the logo of the website Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.html
+++ b/signup.html
@@ -2,20 +2,33 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="signup.css">
+
 	<title>uConnect Home Page</title>
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
 </head>
 <body>
 	<h1>
 		<a href="file:///C:/Users/Chantal/Desktop/quarterspinners/#insert home page link here">uConnect
 		</a>
-		
 	</h1>
 	<style>
+  @import 'https://fonts.googleapis.com/css?family=Pavanam';
+  a:-webkit-any-link {
+    color: white;
+    text-decoration: none;
+    cursor: auto;
+    font-family: 'Pavanam', sans-serif;
+}
+}
+
+
   h1{
 
+    text-decoration: none;
     margin-bottom: 0px;
     margin-top: 0px;
     background-color: #333;
+    font-family: 'Pavanam', sans-serif;
 
   }
 	ul {
@@ -46,7 +59,7 @@ li a:hover {
 <body>
 
 <ul>
-  <li><a href="file:///C:/Users/CHantal/Desktop/quarterspinners/signup.html">Sign Up</a></li>
+  <li><a href="signup.html">Sign Up</a></li>
   <li><a href="#insert features page link here">Features</a></li>
   <li><a href="#insert pricing page link here">Pricing</a></li>
   <li><a href="#insert team page link here">Team</a></li>
@@ -60,7 +73,7 @@ li a:hover {
 <div class="wrapper" style="margin: 0 auto">
   <center>
   <h2>Register For An Account</h2>
-  <img src="battery(2).png">
+  <img src="battery (2).png">
 
   </center>
   <br>
