Updated topbar Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/topbar.html
+++ b/topbar.html
@@ -11,6 +11,14 @@
 		
 	</h1>
 	<style>
+  @import 'https://fonts.googleapis.com/css?family=Pavanam';
+  a:-webkit-any-link {
+    color: white;
+    text-decoration: none;
+    cursor: auto;
+    font-family: 'Pavanam', sans-serif;
+}
+}
   h1{
 
     margin-bottom: 0px;
