--- a/signup.html
+++ b/signup.html
@@ -67,13 +67,22 @@ li a:hover {
 </ul>
 <!-- Copy all of the above into the new HTML pages. This is the top navi bar. Write your code for the desired page function under here or facebook msg me how this works-->
 
+<script>
+function battery1() {
+document.getElementById("battery (2).png").src="battery (3).png"
+}
+
+function battery2() {
+document.getElementById("battery (2).png").src="battery (4).png"
+}
+</script>
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href='signup.css'>
 <div class="wrapper" style="margin: 0 auto">
   <center>
   <h2>Register For An Account</h2>
-  <img src="battery (2).png">
+  <img id="battery (2).png" src="battery (2).png">
 
   </center>
   <br>
@@ -89,11 +98,11 @@ li a:hover {
 <center>
   <p>
   <form class="form" method="post" action="#insert target link for registration here">
-    <input type="text" class="name" placeholder="Name">
+    <input type="text" class="name" id="Name" placeholder="Name" onchange="battery1()">
     <div>
       <p class="name-help">Please enter your first and last name.</p>
     </div>
-    <input type="email" class="email" placeholder="Email">
+    <input type="email" class="email" id="Email" placeholder="Email" onchange="battery2()">
      <div>
       <p class="email-help">Please enter your current email address.</p>
     </div>
