Test Test 123 Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.html
+++ b/signup.html
@@ -65,7 +65,7 @@ li a:hover {
   <li><a href="#insert team page link here">Team</a></li>
   <li><a href="#insert home page link here">Home</a></li>
 </ul>
-<!-- Copy all of the above into the new HTML pages. This is the top navi bar. Write your code for the desired page function under here or facebook msg me how this works-->
+<!-- Copy all of the above into the new HTML pages. This is the top navi bar. Write your code for the desired page function under here or facebook msg me how this works. Still need to change the colour of the top navi bar. Stay tuned for more updates (this was a test to see whether my pushes were going through or not because the git branches split by accident :P )-->
 
 <script>
 function battery1() {
