Fixed up links. Now they go where they're supposed to (Pricing.html, signup.html) Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/Pricing.html
+++ b/Pricing.html
@@ -54,9 +54,9 @@ li a:hover {
 <body>
 
 <ul>
-  <li><a href="file:///C:/Users/CHantal/Desktop/quarterspinners/signup.html">Sign Up</a></li>
+  <li><a href="signup.html">Sign Up</a></li>
   <li><a href="#insert features page link here">Features</a></li>
-  <li><a href="#insert pricing page link here">Pricing</a></li>
+  <li><a href="Pricing.html">Pricing</a></li>
   <li><a href="#insert team page link here">Team</a></li>
   <li><a href="#insert home page link here">Home</a></li>
 </ul>
