--- a/signup.html
+++ b/signup.html
@@ -61,7 +61,7 @@ li a:hover {
 <ul>
   <li><a href="signup.html">Sign Up</a></li>
   <li><a href="#insert features page link here">Features</a></li>
-  <li><a href="#insert pricing page link here">Pricing</a></li>
+  <li><a href="Pricing.html">Pricing</a></li>
   <li><a href="#insert team page link here">Team</a></li>
   <li><a href="#insert home page link here">Home</a></li>
 </ul>
