Changed the overall font of the website (I think). Top bar has changed. Change in your files! Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/topbar.html
+++ b/topbar.html
@@ -12,6 +12,8 @@
 	</h1>
 	<style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
+  html
+    {font-family: 'Pavanam', sans-serif;}
   a:-webkit-any-link {
     color: white;
     text-decoration: none;
