--- a/signup.html
+++ b/signup.html
@@ -13,6 +13,8 @@
 	</h1>
 	<style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
+  html
+    {font-family: 'Pavanam', sans-serif;}
   a:-webkit-any-link {
     color: white;
     text-decoration: none;
