Signed-off-by: tyler <tyler>zzzz

--- a/Home2.html
+++ b/Home2.html
@@ -33,6 +33,18 @@
     font-family: 'Pavanam', sans-serif;
 
   }
+  div.relative{
+    text-decoration: none;
+    position: relative;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    left: 600px;
+    top: 300px;
+    font-size: 34px;
+    background-color: none;
+    font-family: 'Pavanam', sans-serif;
+
+  }
 	ul {
     list-style-type: none;
     margin: 0;
@@ -65,11 +77,14 @@ li a:hover {
   <li><a href="#insert features page link here">Features</a></li>
   <li><a href="Pricing.html">Pricing</a></li>
   <li><a href="#insert team page link here">Team</a></li>
-  <li><a href="#insert home page link here">Home</a></li>
+  <li><a href="Home2.html">Home</a></li>
 </ul>
+<div class="relative">
+  uConnect
 
-<a href="www.youtube.com">
-  <img src="Homepage.png" alt="Beautiful Picture" style="width: 300px;height: 150px">
+</div>>
+<a href="#insert features page link here">
+  <img src="Homepage.png" alt="Beautiful Picture" style="width: 1285px;height: 550px">
 </a>
 </body>
 </html>
