--- a/Pricing.html
+++ b/Pricing.html
@@ -58,7 +58,7 @@ li a:hover {
   <li><a href="#insert features page link here">Features</a></li>
   <li><a href="Pricing.html">Pricing</a></li>
   <li><a href="#insert team page link here">Team</a></li>
-  <li><a href="#insert home page link here">Home</a></li>
+  <li><a href="Home.html">Home</a></li>
 </ul>
 <!-- Copy all of the above into the new HTML pages. This is the top navi bar. Write your code for the desired page function under here or facebook msg me how this works-->
 <div>
