Signed-off-by: Sherry <sherryguiwang@gmail.com>

--- a/teampage.html
+++ b/teampage.html
@@ -70,18 +70,22 @@ li a:hover {
 <center>
 <img src= "chantale.jpg" width="215" height="275" hspace="20">
 <img src= "tiler.jpg" width="215" height="275" hspace="20">
-<img src= "ury.jpg" width="215" height="275" hspace="20">
 <img src= "sherri.jpg" width="215" height="275" hspace="20">
+<img src= "ury.jpg" width="215" height="275" hspace="20">
+<img src= "chrys.jpg" width="215" height="275" hspace="20">
 
-<table width="1000" style = "table-layout: fixed" style="font-family: " >
+</center>
+
+<center>
+<table width="1250" style = "table-layout: fixed" style="font-family: " >
 	
 <tr>
 
-<td valign="margin-top" width="175">Chantalesfsdfoi afjiosdfosiadfoi<td>
-<td valign="margin-top" width="175">Chantalesfsdfoiafjiosdfosiadfoi<td>
-<td valign="margin-top" width="175">Chantalesfsdfoiafjiosdfosiadfoi<td>
-<td valign="margin-top" width="175">Chantalesfsdfoiafjiosdfosiadfoi<td>
-<td valign="margin-top" width="175">Sherry is a first year student studying software engineering at the University of Ottawa. She enjoys spending her free time eating and coding.<td>
+<td valign="margin-top" width="230">Chantal Tseung is an optimistic and weird first year software engineering student! She loves problem solving questions that require logic and "thinking outside the box" to solve. She has also created many video games that showcase her skill in the programming field.<td>
+<td valign="margin-top" width="230"> Tyler Tsang likes a lot of sweets and bubble tea and also likes to play games, practice guitar and sleep. He's a software engineer at uOttawa.<td>
+ <td valign="margin-top" width="230">Sherry Wang is a first year student studying software engineering at the University of Ottawa. She enjoys spending her free time eating and coding.<td>
+ <td valign="margin-top" width="230"> Uri Trejo has lived in Mexico City for 16 years, and moved to Ottawa, Canada in 2015. After graduating from a french high school, he is now in his first year at the University of Ottawa pursuing a degree in software engineering.<td>
+<td valign="margin-top" width="230"> Chris Trottier enjoys meeting new people and finding ways to help them have an uplifting experience<td>
 </tr>
 
 </table>
