--- a/Features.html
+++ b/Features.html
@@ -6,7 +6,7 @@
 		table.Features {
 		width:100%;
 		border-collapse:collapse;
-		color:black;
+		color:white;
 		table-layout:fixed;
 		}
 
@@ -16,6 +16,8 @@
 		border-style:solid;
 		padding:3px;
 		text-align:center;
+		font-size:130%;
+
 		}
 
 		table.Features thead {
@@ -23,19 +25,77 @@
 		}
 	</style>
 </head>
+<body style="background-color: black">
+
+	<h1>
+		<a href="file:///C:/Users/Chantal/Desktop/quarterspinners/test.html">uConnect
+		</a>
+		
+	</h1>
+	<style>
+  @import 'https://fonts.googleapis.com/css?family=Pavanam';
+  html
+    {font-family: 'Pavanam', sans-serif;}
+  a:-webkit-any-link {
+    color: white;
+    text-decoration: none;
+    cursor: auto;
+    font-family: 'Pavanam', sans-serif;
+}
+}
+  h1{
+
+    margin-bottom: 0px;
+    margin-top: 0px;
+    background-color: #333;
+
+  }
+	ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: right;
+}
+
+li a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+</style>
+</head>
 <body>
+
+<ul>
+  <li><a href="signup.html">Sign Up</a></li>
+  <li><a href="#insert features page link here">Features</a></li>
+  <li><a href="Pricing.html">Pricing</a></li>
+  <li><a href="#insert team page link here">Team</a></li>
+  <li><a href="#insert home page link here">Home</a></li>
+</ul>
 
 	<table class="Features">
 		<thead>
 			<tr>
-			<th colspan="3">FEATURES</th>
+			<th colspan="3"><br>FEATURES<br><br></th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<td><img src="https://i.ytimg.com/vi/eFYB652Yns8/maxresdefault.jpg" alt="Save Time" width="150" height="100"></td>
-				<td><img src="https://i.ytimg.com/vi/eFYB652Yns8/maxresdefault.jpg" alt="Connect" width="150" height="100"></td>
-				<td><img src="https://i.ytimg.com/vi/eFYB652Yns8/maxresdefault.jpg" alt="Organise" width="150" height="100"></td>
+				<td><br><img src="https://i.ytimg.com/vi/eFYB652Yns8/maxresdefault.jpg" alt="Save Time" width="250" height="167"></td>
+				<td><br><img src="https://i.ytimg.com/vi/eFYB652Yns8/maxresdefault.jpg" alt="Connect" width="250" height="167"></td>
+				<td><br><img src="https://i.ytimg.com/vi/eFYB652Yns8/maxresdefault.jpg" alt="Organise" width="250" height="167"></td>
 			</tr>
 			<tr>
 				<td><strong>Save Time</strong></td>
@@ -44,7 +104,7 @@
 			</tr>
 			<tr>
 				<td>No more multitasking! Manage your social networks from one place.</td>
-				<td>Conecta y tendras muchas redes de alguien en una.</td>
+				<td>Now you only need to connect through ONE single account (uConnect) and have maximum impact.</td>
 				<td>Arrange your social networks' feed to show it in chronological or relevance order.</td>
 			</tr>
 		</tbody>
