Signed-off-by: Uri Trejo <Uri Trejo> Includes Links To Other Tabs

--- a/Features.html
+++ b/Features.html
@@ -79,10 +79,10 @@ li a:hover {
 
 <ul>
   <li><a href="signup.html">Sign Up</a></li>
-  <li><a href="#insert features page link here">Features</a></li>
+  <li><a href="Features.html">Features</a></li>
   <li><a href="Pricing.html">Pricing</a></li>
-  <li><a href="#insert team page link here">Team</a></li>
-  <li><a href="#insert home page link here">Home</a></li>
+  <li><a href="teampage.html">Team</a></li>
+  <li><a href="Home.html">Home</a></li>
 </ul>
 
 	<table class="Features">
