I fixed the top navi bar and implemented it into everyone's file. I did have to modify some code outside of the top bar navi so check all your codes below the top navi bar to see if anything got substantially changed. Sorry in advance if things got messed up! Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/Features.html
+++ b/Features.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Features</title>
-	<style type="text/css" scoped>
-		table.Features {
-		width:100%;
-		border-collapse:collapse;
-		color:white;
-		table-layout:fixed;
-		}
 
-		table.Features td, table.Features th {
-		border-width:1px;
-		border-color:black;
-		border-style:solid;
-		padding:3px;
-		text-align:center;
-		font-size:130%;
-
-		}
-
-		table.Features thead {
-		background-color:lightgreen;
-		}
-	</style>
+	<title>uConnect Home Page</title>
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
 </head>
-<body style="background-color: black">
-
+<body>
 	<h1>
-		<a href="file:///C:/Users/Chantal/Desktop/quarterspinners/test.html">uConnect
+		<a href="Home.html">uConnect
 		</a>
-		
 	</h1>
 	<style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
+  body{
+  background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);
+
+}
+font-family: 'Pavanam', sans-serif;
+h1{
+  element.style {
+}
+a:-webkit-any-link {
+    color: -webkit-link;
+    text-decoration: none;
+    cursor: auto;
+}
+}
   html
     {font-family: 'Pavanam', sans-serif;}
   a:-webkit-any-link {
@@ -48,6 +40,7 @@
     margin-bottom: 0px;
     margin-top: 0px;
     background-color: #333;
+    font-family: 'Pavanam', sans-serif;
 
   }
 	ul {
@@ -70,7 +63,7 @@ li a {
     text-decoration: none;
 }
 
-li a:hover { 
+li a:hover {
     background-color: #111;
 }
 </style>
