--- a/Pricing.html
+++ b/Pricing.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="p.css">
+
 	<title>uConnect Home Page</title>
+	 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
 </head>
 <body>
 	<h1>
-		<a href="file:///C:/Users/Chantal/Desktop/quarterspinners/test.html">uConnect
+		<a href="Home.html">uConnect
 		</a>
 		
 	</h1>
 	<style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
+    body{
+  background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);
+
+}
+font-family: 'Pavanam', sans-serif;
   a:-webkit-any-link {
     color: white;
     text-decoration: none;
@@ -26,6 +32,14 @@
     background-color: #333;
 
   }
+    html
+    {font-family: 'Pavanam', sans-serif;}
+  a:-webkit-any-link {
+    color: white;
+    text-decoration: none;
+    cursor: auto;
+    font-family: 'Pavanam', sans-serif;
+}
 	ul {
     list-style-type: none;
     margin: 0;
@@ -55,12 +69,13 @@ li a:hover {
 
 <ul>
   <li><a href="signup.html">Sign Up</a></li>
-  <li><a href="#insert features page link here">Features</a></li>
+  <li><a href="Features.html">Features</a></li>
   <li><a href="Pricing.html">Pricing</a></li>
-  <li><a href="#insert team page link here">Team</a></li>
+  <li><a href="teampage.html">Team</a></li>
   <li><a href="Home.html">Home</a></li>
 </ul>
 <!-- Copy all of the above into the new HTML pages. This is the top navi bar. Write your code for the desired page function under here or facebook msg me how this works-->
+<link rel="stylesheet" type="text/css" href="p.css">
 <div>
 <h2 style="color:#4484CE">FREE</h2>
 <table align="center">
