--- a/signup.html
+++ b/signup.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="signup.css">
 
-	<title>uConnect Home Page</title>
+  <title>uConnect Home Page</title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
 </head>
 <body>
-	<h1>
-		<a href="file:///C:/Users/Chantal/Desktop/quarterspinners/#insert home page link here">uConnect
-		</a>
-	</h1>
-	<style>
+  <h1>
+    <a href="Home.html">uConnect
+    </a>
+  </h1>
+  <style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
+  body{
+  background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);
+
+}
+font-family: 'Pavanam', sans-serif;
+h1{
+  element.style {
+}
+a:-webkit-any-link {
+    color: -webkit-link;
+    text-decoration: none;
+    cursor: auto;
+}
+}
   html
     {font-family: 'Pavanam', sans-serif;}
   a:-webkit-any-link {
@@ -22,18 +35,15 @@
     font-family: 'Pavanam', sans-serif;
 }
 }
-
-
   h1{
 
-    text-decoration: none;
     margin-bottom: 0px;
     margin-top: 0px;
     background-color: #333;
     font-family: 'Pavanam', sans-serif;
 
   }
-	ul {
+  ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -62,13 +72,13 @@ li a:hover {
 
 <ul>
   <li><a href="signup.html">Sign Up</a></li>
-  <li><a href="#insert features page link here">Features</a></li>
+  <li><a href="Features.html">Features</a></li>
   <li><a href="Pricing.html">Pricing</a></li>
-  <li><a href="#insert team page link here">Team</a></li>
+  <li><a href="teampage.html">Team</a></li>
   <li><a href="Home.html">Home</a></li>
 </ul>
 <!-- Copy all of the above into the new HTML pages. This is the top navi bar. Write your code for the desired page function under here or facebook msg me how this works. Still need to change the colour of the top navi bar. Stay tuned for more updates (this was a test to see whether my pushes were going through or not because the git branches split by accident :P )-->
-
+<link rel="stylesheet" type="text/css" href="signup.css">
 <script>
 function battery1() {
 document.getElementById("battery (2).png").src="battery (3).png"
