Signed-off-by: Uri Trejo <Uri Trejo>

--- a/Features.html
+++ b/Features.html
@@ -11,6 +11,31 @@
 		</a>
 	</h1>
 	<style>
+
+
+table.Features {
+    width:100%;
+    border-collapse:collapse;
+    color:white;
+    table-layout:fixed;
+    }
+
+    table.Features td, table.Features th {
+    border-width:1px;
+    border-color:black;
+    border-style:solid;
+    padding:3px;
+    text-align:center;
+    font-size:130%;
+
+    }
+
+    table.Features thead {
+    background-color:lightgreen;
+    }
+ 
+
+
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
   body{
   background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);
