--- a/topbar.html
+++ b/topbar.html
@@ -13,8 +13,9 @@
 	<style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
   body{
-  background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);
-
+  /*background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);*/
+  /*Cerulean-#4484CE, Aluminum-#D9D9D9, Light (Yellow)-#F9CF00, Tangerine-#F19F4D, Darker Grey-#B3B3B3 Slightly Darker Grey-#C0C0C0*/
+  background-color: #4484CE;
 }
 font-family: 'Pavanam', sans-serif;
 h1{
@@ -28,27 +29,31 @@ a:-webkit-any-link {
 }
   html
     {font-family: 'Pavanam', sans-serif;}
-  a:-webkit-any-link {
-    color: white;
+  a {
+    color:white;
     text-decoration: none;
     cursor: auto;
     font-family: 'Pavanam', sans-serif;
 }
 }
   h1{
-
+    color: white;
     margin-bottom: 0px;
     margin-top: 0px;
-    background-color: #333;
-    font-family: 'Pavanam', sans-serif;
+/*    background-color: #D9D9D9;
+*/    font-family: 'Pavanam', sans-serif;
 
   }
 	ul {
+    font-family: 'Pavanam', sans-serif;
+    color: black;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #D9D9D9;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 li {
@@ -57,14 +62,14 @@ li {
 
 li a {
     display: inline-block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 li a:hover {
-    background-color: #111;
+    background-color: #B3B3B3;
 }
 </style>
 </head>
