I changed the top left logo. Sizes are not final Colour is not final This is all testing Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.html
+++ b/signup.html
@@ -6,25 +6,45 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
 </head>
 <body>
+<body style="margin-top: : 0px; margin-bottom: 0px">
   <h1>
-    <a href="Home.html">uConnect
+    <a href="Home.html">
+    <img src="uConnect.png" style="width: 300px; height: 100px;">
     </a>
   </h1>
+  <h3>
+    <h3 style="margin-top: 0px; margin-bottom: 0px;">
+    A New Way to Connect
+  </h3>
   <style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
   body{
   /*background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);*/
   /*Cerulean-#4484CE, Aluminum-#D9D9D9, Light (Yellow)-#F9CF00, Tangerine-#F19F4D, Darker Grey-#B3B3B3 Slightly Darker Grey-#C0C0C0*/
   background-color: #4484CE;
+  font-family: 'Pavanam', sans-serif;
 }
-font-family: 'Pavanam', sans-serif;
+
 h1{
+      color: white;
+    margin-bottom: 0px;
+    margin-top: 0px;
+/*    background-color: #D9D9D9;
+*/    font-family: 'Pavanam', sans-serif;
+
   element.style {
 }
 a:-webkit-any-link {
     color: -webkit-link;
     text-decoration: none;
     cursor: auto;
+}
+h3{
+  font-size: "1";
+  font-family: 'Pavanam', sans-serif;
+  margin-top: : 0px
+  margin-bottom: 0px;
+}
 }
 }
   html
