Reverted changes because I have no artistic style
Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.html
+++ b/signup.html
@@ -8,8 +8,8 @@
 <body>
 <body style="margin-top: : 0px; margin-bottom: 0px">
   <h1>
-    <a href="Home.html">
-    <img src="uConnect.png" style="width: 300px; height: 100px;">
+    <a href="Home.html">uConnect
+    
     </a>
   </h1>
   <h3>
