Signed-off-by: Sherry <sherryguiwang@gmail.com>

--- a/Features.html
+++ b/Features.html
@@ -30,9 +30,9 @@ table.Features {
 
     }
 
-    table.Features thead {
-    background-color:lightgreen;
-    }
+/*    table.Features thead {
+    /background-color:lightgreen;
+    } */
  
 
 
