--- a/Home.html
+++ b/Home.html
@@ -82,8 +82,9 @@ li a:hover {
 
 </div>>
 <div class="relative2">
-  A new way to connect
-
+  <center>
+  <font color = "white">A new way to connect
+</center>
 
 </div>
 <a href="#insert features page link here">
