--- a/Pricing.html
+++ b/Pricing.html
@@ -81,30 +81,30 @@ li a:hover {
 <table align="center">
 	<tr>
 		<th></th>		
-		<th>FREE</th>
-		<th>Premium</th>
+		<th><font color = "white">FREE</th>
+		<th><font color = "white">Premium</th>
 	</tr>
 	<tr>
-		<th>Link multiple social media accounts to one location</th>
-		<td>INFO</td>
-		<td>INFO</td>
+		<th><font color = "white">Link multiple social media accounts to one location</th>
+		<td><font color = "white">INFO</td>
+		<td><font color = "white">INFO</td>
 	</tr>
 	<tr>
-		<th>Ad free</th>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<th>Link an unlimited number of acounts</th>
+		<th><font color = "white">Ad free</th>
 		<td></td>
 		<td></td>
 	</tr>
 	<tr>
-		<th>Access to premium emotes</th>
+		<th><font color = "white">Link an unlimited number of acounts</th>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<th><font color = "white">Access to premium emotes</th>
 		<td></td>
 		<td></td>
 	<tr>
-		<th>premium star by your name</th>
+		<th><font color = "white">Premium star by your name</th>
 		<td></td>
 		<td></td>
 	</tr>
