--- a/signup.html
+++ b/signup.html
@@ -14,14 +14,16 @@
   </h1>
   <h3>
     <h3 style="margin-top: 0px; margin-bottom: 0px;">
-    A New Way to Connect
+    <font color = "white"> A New Way to Connect
   </h3>
   <style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
   body{
   /*background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);*/
   /*Cerulean-#4484CE, Aluminum-#D9D9D9, Light (Yellow)-#F9CF00, Tangerine-#F19F4D, Darker Grey-#B3B3B3 Slightly Darker Grey-#C0C0C0*/
-  background-color: #4484CE;
+  /*background-color: #111; */
+  background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);
+
   font-family: 'Pavanam', sans-serif;
 }
 
@@ -71,7 +73,7 @@ h3{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #D9D9D9;
+    background-color: #333;
     margin-bottom: 0px;
     margin-top: 0px;
 }
