--- a/Pricing.html
+++ b/Pricing.html
@@ -77,7 +77,7 @@ li a:hover {
 <!-- Copy all of the above into the new HTML pages. This is the top navi bar. Write your code for the desired page function under here or facebook msg me how this works-->
 <link rel="stylesheet" type="text/css" href="p.css">
 <div>
-<h2 style="color:#4484CE">FREE</h2>
+<h2 style="color:#4484CE">Why Go Premium?</h2>
 <table align="center">
 	<tr>
 		<th></th>		
@@ -86,33 +86,29 @@ li a:hover {
 	</tr>
 	<tr>
 		<th>Link multiple social media accounts to one location</th>
-		<td>INFO</td>
-		<td>INFO</td>
+		<td>&#10004;</td>
+		<td>&#10004;</td>
 	</tr>
 	<tr>
 		<th>Ad free</th>
 		<td></td>
-		<td></td>
+		<td>&#10004;</td>
 	</tr>
 	<tr>
 		<th>Link an unlimited number of acounts</th>
 		<td></td>
-		<td></td>
+		<td>&#10004;</td>
 	</tr>
 	<tr>
 		<th>Access to premium emotes</th>
 		<td></td>
-		<td></td>
+		<td>&#10004;</td>
 	<tr>
 		<th>premium star by your name</th>
 		<td></td>
-		<td></td>
+		<td>&#10004;</td>
 	</tr>
 </table>
-
-
-
-
 
 </body>
 </html>
