Signed-off-by: tyler <tyler>

--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
   body{
   /*background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);*/
   /*Cerulean-#4484CE, Aluminum-#D9D9D9, Light (Yellow)-#F9CF00, Tangerine-#F19F4D, Darker Grey-#B3B3B3 Slightly Darker Grey-#C0C0C0*/
-  background-color: #4484CE;
+  background-color: #466995;
   font-family: 'Pavanam', sans-serif;
 }
 
@@ -71,7 +71,7 @@ h3{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #D9D9D9;
+    background-color: #A4B0F5;
     margin-bottom: 0px;
     margin-top: 0px;
 }
@@ -89,7 +89,7 @@ li a {
 }
 
 li a:hover {
-    background-color: #B3B3B3;
+    background-color: #466995;
 }
 </style>
 </head>
@@ -127,7 +127,7 @@ document.getElementById("battery (2).png").src="battery (4).png"
   .center {
     margin: auto;
     width: 60%;
-    border: 3px solid #73AD21;
+    border: 3px solid #4A5043;
     padding: 10px;
 }
 </style>
