Signed-off-by: tyler <tyler> Fade doesn't is impossible

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   <style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
   body{
-  background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);
-
-}
+  /*background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);*/
+    background-color: #466995;
 font-family: 'Pavanam', sans-serif;
+}
+
 h1{
   element.style {
 }
@@ -48,7 +49,7 @@ a:-webkit-any-link {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #A4B0F5;
 }
 
 li {
@@ -57,14 +58,14 @@ li {
 
 li a {
     display: inline-block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 li a:hover {
-    background-color: #B9D8C2;
+    background-color: #466995;
 }
 </style>
 </head>
@@ -77,16 +78,14 @@ li a:hover {
   <li><a href="teampage.html">Team</a></li>
   <li><a href="Home.html">Home</a></li>
 </ul>
+<link rel="stylesheet" type="text/css" href="index.css">
 <div class="relative">
   uConnect
-
-</div>>
+</div>
 <div class="relative2">
   A new way to connect
-
-
 </div>
-<a href="#insert features page link here">
+<a href="Features.html">
   <img src="Homepage.png" alt="Beautiful Picture" style="width: 1275px;height: 550px">
 </a>
 </body>
