--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ li a:hover {
   <li><a href="Features.html">Features</a></li>
   <li><a href="Pricing.html">Pricing</a></li>
   <li><a href="teampage.html">Team</a></li>
-  <li><a href="Home.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
 </ul>
 <link rel="stylesheet" type="text/css" href="index.css">
 <div class="relative">
