Added a "Register Now" button onto the Features page.

--- a/Features.html
+++ b/Features.html
@@ -93,6 +93,8 @@ li a:hover {
 }
 </style>
 </head>
+
+
 <body>
 
 <ul>
@@ -127,5 +129,6 @@ li a:hover {
 			</tr>
 		</tbody>
 	</table>
+  <p style="text-align:center; color:purple; font-size:160%;"><a href="signup.html"><b>REGISTER NOW!</b></a></p>
 </body>
 </html>
