Will change logo Signed-off-by: Chris T <ctrot084@uottawa.ca>

--- a/testestest.html
+++ b/testestest.html
@@ -3,8 +3,8 @@
 <head>
   <form action="index.html">
     <button class="button">
-      uConnect
-    </button>
+    <input src="">
+        </button>
   </form>
   
   <title>uConnect Home Page</title>
