testtesttesttest is the home page. Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/testtesttest.html
+++ b/testtesttest.html
@@ -6,11 +6,19 @@
       uConnect
     </button>
   </form>
+
   
   <title>uConnect Home Page</title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
 </head>
 <body>
+<div>
+  <br>
+    <center>
+      A new way to connect.
+    </center>
+  </br>
+  </div>
   <style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
   body{
