--- a/testtesttesttest.html
+++ b/testtesttesttest.html
@@ -11,11 +11,38 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
 </head>
 <body>
+  <br>
+  <center>
+     <img src="Logomakr_5eYYlX.png">
+  </center>
   <div>
     <center>
       A new way to connect.
     </center>
   </div>
+  <center>
+    <form action="Features.html">
+    <button class="button2">
+    Features
+    </button>
+  </form>
+  <form action="Pricing.html">
+    <button class="button2">
+    Pricing
+    </button>
+  </form>
+  <form action="teampage.html">
+    <button class="button2">
+    Team
+    </button>
+  </form>
+  <form action="signup.html">
+    <button class="button2">
+    Sign Up
+    </button>
+  </form>
+  </center>
+  
   <style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
   body{
@@ -43,7 +70,7 @@
     text-align: center;
     font-family: 'Pavanam', sans-serif;
     font-weight: bold;
-    font-size: 28px;
+    font-size: 26px;
     height: 200px;
     width: 400px;
     position: fixed;
@@ -51,6 +78,9 @@
     left: 50%;
     margin-top: -100px;
     margin-left: -200px;
+  }
+  form{
+    display: inline-block;
   }
   .button{
     font-family: 'Pavanam', sans-serif;
@@ -70,4 +100,28 @@
   .button:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
   }
-  
+  .button2{
+    font-weight: bold;
+    font-family: 'Pavanam', sans-serif;
+    background-color: white ;
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    opacity: 0.9;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1dada6), to(#FFF));
+    background-image: -webkit-linear-gradient(#1dada6 0%, #FFF 100%);
+    background-image: -moz-linear-gradient(#1dada6 0%, #FFF 100%);
+    background-image: -o-linear-gradient(#1dada6 0%, #FFF 100%);
+    background-image: linear-gradient(#1dada6 0%, #FFF 100%);
+  }
+  .button2:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  }
