Still revamping Finished with home page Now moving on to features Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/testtesttesttest.html
+++ b/testtesttesttest.html
@@ -6,7 +6,13 @@
     <input type = "image" src="Logomakr_5eYYlX.png" style="width: 180px; height: 70px">
         </button>
   </form>
-  
+  <center>
+  <div class="container">
+    <center>
+      A new way to connect.
+    </center>
+  </div>
+  </center>
   <title>uConnect Home Page</title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
 </head>
@@ -15,11 +21,6 @@
   <center>
      <img src="Logomakr_5eYYlX.png">
   </center>
-  <div>
-    <center>
-      A new way to connect.
-    </center>
-  </div>
   <center>
     <form action="Features.html">
     <button class="button2">
@@ -53,6 +54,7 @@
   html{
     font-family: 'Pavanam', sans-serif;
     text-decoration: none;
+    vertical-align: middle;
   }
   h1{
     margin-top: 0px;
@@ -66,19 +68,22 @@
     color: black;
     cursor: auto;
   }
-  div{
+
+  div.container{
     text-align: center;
     font-family: 'Pavanam', sans-serif;
     font-weight: bold;
-    font-size: 26px;
-    height: 200px;
+    font-size: 36px;
+    height: 50px;
     width: 400px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -200px;
+    position: absolute;
+    z-index: 2;
+    margin-left:-200px;
+    left:55%;
+    bottom: 70%;
+
   }
+  
   form{
     display: inline-block;
   }
