Need to upload more pictures so I'm saving now Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/featurestest.html
+++ b/featurestest.html
@@ -11,10 +11,10 @@
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <div class="images">
 	<center>
-	<img class="mySlides" src="https://openclipart.org/image/2400px/svg_to_png/173843/uhr.png" style="width:20%">
+	<img class="mySlides" src="time.png" style="width:40%">
 
-  	<img class="mySlides" src="https://collegediabetesnetwork.org/sites/default/files/styles/campus_resources/public/WEB_pngs/icon_network_green_solid.png" style="width:20%">
-  	<img class="mySlides" src="http://4.bp.blogspot.com/-oPHlXjUN2-s/U4oFqgh_XFI/AAAAAAAABNA/P2JW4aSpAPQ/s1600/layers.png" style="width:20%">
+  	<img class="mySlides" src="connect.png" style="width:50%">
+  	<img class="mySlides" src="organize.png" style="width:55%">
 
 	<a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
 	<a class="w3-btn-floating w3-display-right" onclick="plusDivs(1)">&#10095;</a>
@@ -22,6 +22,11 @@
 </div>
 
 <style>
+body{
+	background: url(http://www.popmech.ru/upload/iblock/dfe/dfeb1f501d7e77dcaf73b07f903424d0.png);
+	/*background-repeat: no-repeat;*/
+	background-size: cover;
+}
 .button{
     font-family: 'Pavanam', sans-serif;
     background-color: white ;
