Need to reupload the background image Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/featurestest.html
+++ b/featurestest.html
@@ -23,8 +23,8 @@
 
 <style>
 body{
-	background: url(http://www.popmech.ru/upload/iblock/dfe/dfeb1f501d7e77dcaf73b07f903424d0.png);
-	/*background-repeat: no-repeat;*/
+	background-image: url(dfeb1f501d7e77dcaf73b07f903424d0.png);
+	background-repeat: no-repeat;
 	background-size: cover;
 }
 .button{
