--- a/featurestest.html
+++ b/featurestest.html
@@ -7,6 +7,11 @@
 		</button>
 	</form>
 </head>
+<center>
+<h1>
+	Features
+</h1>
+</center>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <div class="images">
@@ -18,10 +23,21 @@
 
 	<a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
 	<a class="w3-btn-floating w3-display-right" onclick="plusDivs(1)">&#10095;</a>
+
+	<form action="signup.html" style="margin-bottom: 40px">
+    <button class="button2">
+    Sign Up Now!
+    </button>
+  </form>
 	</center>
 </div>
 
 <style>
+@import 'https://fonts.googleapis.com/css?family=Pavanam';
+h1{
+	font-family: 'Pavanam', sans-serif;
+	font-weight: bold;
+}
 body{
 	background-image: url(dfeb1f501d7e77dcaf73b07f903424d0.png);
 	background-repeat: no-repeat;
@@ -43,6 +59,32 @@ body{
     transition-duration: 0.4s;
   }
   .button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
+  .button2{
+  	font-weight: bold;
+    font-family: 'Pavanam', sans-serif;
+    background-color: white ;
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    opacity: 0.9;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#aa1cad), to(#FFF));
+    background-image: -webkit-linear-gradient(#aa1cad 0%, #FFF 100%);
+    background-image: -moz-linear-gradient(#aa1cad 0%, #FFF 100%);
+    background-image: -o-linear-gradient(#aa1cad 0%, #FFF 100%);
+    background-image: linear-gradient(#aa1cad 0%, #FFF 100%);
+  }
+  .button2:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
   }
 </style>
