Backing up and then uploading some backgrounds Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/teampagetest.html
+++ b/teampagetest.html
@@ -10,21 +10,55 @@
 	</form>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
-<h1>
-	<center>
+<center>	
+	<h1>
 		Teampage
-	</center>
-	<br>
-</h1>
+		<br>
+		<br>
+	</h1>
+</center>
+<center>
 	<div class="wrapper">
-    	<img id="slide" src="chantale.jpg">
+		<!-- <table> -->
+    		<img id="slide" src="chantale.jpg">
+    	<!-- </table> -->
+    	<br>
 	</div>
-
+	<div class="wrapper2">
+		<!-- <table> -->
+    		<img id="slide" src="tiler.jpg" >
+    	<!-- </table> -->
+    	<br>
+	</div>
+	<div class="wrapper3">
+		<!-- <table> -->
+    		<img id="slide" src="sherri.jpg" >
+    	<!-- </table> -->
+    	<br>
+	</div>
+	<div class="wrapper4">
+		<!-- <table> -->
+    		<img id="slide" src="ury.jpg" >
+    	<!-- </table> -->
+    	<br>
+	</div>
+	<div class="wrapper5">
+		<!-- <table> -->
+    		<img id="slide" src="chrys.jpg" >
+    	<!-- </table> -->
+    	<br>
+	</div>
+</center>
 <style>
 @import 'https://fonts.googleapis.com/css?family=Pavanam';
 h1{
 	font-family: 'Pavanam', sans-serif;
 	font-weight: bold;
+}
+img{
+	display: inline-block;
+	height: 30%;
+	width: 20%;
 }
 .button{
     font-family: 'Pavanam', sans-serif;
@@ -49,11 +83,39 @@ h1{
     overflow: hidden;
     width: 215px;
     height: 275px;
-    left: 20%; 
+    display: inline-block;
+}
+.wrapper2 {
+    position: relative;
+    overflow: hidden;
+    width: 215px;
+    height: 275px;
+    display: inline-block;
+}
+.wrapper3 {
+    position: relative;
+    overflow: hidden;
+    width: 215px;
+    height: 275px;
+    display: inline-block;
+}
+.wrapper4 {
+    position: relative;
+    overflow: hidden;
+    width: 215px;
+    height: 275px;
+    display: inline-block;
+}
+.wrapper5 {
+    position: relative;
+    overflow: hidden;
+    width: 215px;
+    height: 275px;
+    display: inline-block;
 }
 
 #slide {
-    position: absolute;
+    position: relative;
     left: -400px;
     width: 215px;
     height: 275px;
