--- a/featurestest.html
+++ b/featurestest.html
@@ -7,6 +7,13 @@
 		</button>
 	</form>
 </head>
+<ul>
+  <li><a href="signup.html">Sign Up</a></li>
+  <li><a href="Features.html">Features</a></li>
+  <li><a href="Pricing.html">Pricing</a></li>
+  <li><a href="teampage.html">Team</a></li>
+  <li><a href="Home.html">Home</a></li>
+</ul>
 <center>
 <h1>
 	Features
@@ -42,6 +49,53 @@ body{
 	background-image: url(dfeb1f501d7e77dcaf73b07f903424d0.png);
 	background-repeat: no-repeat;
 	background-size: cover;
+}
+ul {
+  font-family: 'Pavanam', sans-serif;
+  color: black;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+li {
+  float: right;
+}
+
+li a {
+  display: inline-block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-weight: bold;
+  font-family: 'Pavanam', sans-serif;
+  background-color: white ;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  opacity: 0.9;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#aa1cad), to(#FFF));
+  background-image: -webkit-linear-gradient(#aa1cad 0%, #FFF 100%);
+  background-image: -moz-linear-gradient(#aa1cad 0%, #FFF 100%);
+  background-image: -o-linear-gradient(#aa1cad 0%, #FFF 100%);
+  background-image: linear-gradient(#aa1cad 0%, #FFF 100%);
+}
+
+li a:hover {
+  background-color: #B3B3B3;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19)
 }
 .button{
     font-family: 'Pavanam', sans-serif;
