--- a/teampage.html
+++ b/teampage.html
@@ -81,7 +81,7 @@ li a:hover {
 
 
 <center>
-<h2><font color = "white"> Our Team </h2>
+<h2><font color = "black"> Our Team </h2>
 
 <img src= "chantale.jpg" width="215" height="275" hspace="20">
 <img src= "tiler.jpg" width="215" height="275" hspace="20">
@@ -93,11 +93,11 @@ li a:hover {
 
 
 <tr>
-<td valign="margin-top" width="230"><font color = "white">Chantal Tseung is an optimistic and weird first year software engineering student! She loves problem solving questions that require logic and "thinking outside the box" to solve. She has also created many video games that showcase her skill in the programming field.<td>
-<td valign="margin-top" width="230"> <font color = "white">Tyler Tsang likes a lot of sweets and bubble tea and also likes to play games, practice guitar and sleep. He's a software engineer at uOttawa.<td>
- <td valign="margin-top" width="230"><font color = "white">Sherry Wang is a first year student studying software engineering at the University of Ottawa. She enjoys spending her free time eating and coding.<td>
- <td valign="margin-top" width="230"> <font color = "white">Uri Trejo has lived in Mexico City for 16 years, and moved to Ottawa, Canada in 2015. After graduating from a french high school, he is now in his first year at the University of Ottawa pursuing a degree in software engineering.<td>
-<td valign="margin-top" width="230"><font color = "white"> Chris Trottier enjoys meeting new people and finding ways to help them have an uplifting experience<td>
+<td valign="margin-top" width="230"><font color = "black">Chantal Tseung is an optimistic and weird first year software engineering student! She loves problem solving questions that require logic and "thinking outside the box" to solve. She has also created many video games that showcase her skill in the programming field.<td>
+<td valign="margin-top" width="230"> <font color = "black">Tyler Tsang likes a lot of sweets and bubble tea and also likes to play games, practice guitar and sleep. He's a software engineer at uOttawa.<td>
+ <td valign="margin-top" width="230"><font color = "black">Sherry Wang is a first year student studying software engineering at the University of Ottawa. She enjoys spending her free time eating and coding.<td>
+ <td valign="margin-top" width="230"> <font color = "black">Uri Trejo has lived in Mexico City for 16 years, and moved to Ottawa, Canada in 2015. After graduating from a french high school, he is now in his first year at the University of Ottawa pursuing a degree in software engineering.<td>
+<td valign="margin-top" width="230"><font color = "black"> Chris Trottier enjoys meeting new people and finding ways to help them have an uplifting experience<td>
 </tr>
 
 </table>
