Team page is more or less done Need to rescale the background image and add buttons Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/teampagetest.html
+++ b/teampagetest.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-
 <head>
 <form action="index.html">
 		<button class="button">
@@ -20,45 +19,50 @@
 <center>
 	<div class="wrapper">
 		<!-- <table> -->
-    		<img id="slide" src="chantale.jpg">
+    		<img id="slide" src="chantale.png">
     	<!-- </table> -->
     	<br>
 	</div>
 	<div class="wrapper2">
 		<!-- <table> -->
-    		<img id="slide" src="tiler.jpg" >
+    		<img id="slide" src="tiler.png" >
     	<!-- </table> -->
     	<br>
 	</div>
 	<div class="wrapper3">
 		<!-- <table> -->
-    		<img id="slide" src="sherri.jpg" >
+    		<img id="slide" src="sherri.png" >
     	<!-- </table> -->
     	<br>
 	</div>
 	<div class="wrapper4">
 		<!-- <table> -->
-    		<img id="slide" src="ury.jpg" >
+    		<img id="slide" src="ury.png" >
     	<!-- </table> -->
     	<br>
 	</div>
 	<div class="wrapper5">
 		<!-- <table> -->
-    		<img id="slide" src="chrys.jpg" >
+    		<img id="slide" src="chrys.png" >
     	<!-- </table> -->
     	<br>
 	</div>
 </center>
 <style>
 @import 'https://fonts.googleapis.com/css?family=Pavanam';
+body{
+	background: url(https://www.morleycollege.ac.uk/assets/000/000/122/connect_discoverHI_link_block.jpg?1468402246);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
 h1{
 	font-family: 'Pavanam', sans-serif;
 	font-weight: bold;
 }
 img{
 	display: inline-block;
-	height: 30%;
-	width: 20%;
+	height: 300px;
+	width: 300px;
 }
 .button{
     font-family: 'Pavanam', sans-serif;
@@ -81,44 +85,44 @@ img{
 .wrapper {
     position: relative;
     overflow: hidden;
-    width: 215px;
-    height: 275px;
+    width: 300px;
+    height: 300px;
     display: inline-block;
 }
 .wrapper2 {
     position: relative;
     overflow: hidden;
-    width: 215px;
-    height: 275px;
+    width: 300px;
+    height: 300px;
     display: inline-block;
 }
 .wrapper3 {
     position: relative;
     overflow: hidden;
-    width: 215px;
-    height: 275px;
+    width: 300px;
+    height: 300px;
     display: inline-block;
 }
 .wrapper4 {
     position: relative;
     overflow: hidden;
-    width: 215px;
-    height: 275px;
+    width: 300px;
+    height: 300px;
     display: inline-block;
 }
 .wrapper5 {
     position: relative;
     overflow: hidden;
-    width: 215px;
-    height: 275px;
+    width: 300px;
+    height: 300px;
     display: inline-block;
 }
 
 #slide {
     position: relative;
     left: -400px;
-    width: 215px;
-    height: 275px;
+    width: 300px;
+    height: 300px;
     background: blue;
     -webkit-animation: slide 0.5s forwards;
     -webkit-animation-delay: 2s;
