Parallax test Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/index.html
+++ b/index.html
@@ -1,92 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<link rel="stylesheet" type="text/css" href="index.css">
+  <form action="index.html">
+    <button class="button">
+      <input type = "image" src="Logomakr_5eYYlX.png" style="width: 180px; height: 70px">
+    </button>
+  </form>
+  <center>
+    <div class="container">
+      <center>
+        A new way to connect.
+      </center>
+    </div>
+  </center>
   <title>uConnect Home Page</title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
 </head>
 <body>
-  <h1>
-    <a href="Home.html">uConnect
-    </a>
-  </h1>
-  <style>
+  <br>
+  <center>
+   <img src="Logomakr_5eYYlX.png">
+ </center>
+ <center>
+  <form action="FeaturesFinal.html">
+    <button class="button2">
+      Features
+    </button>
+  </form>
+  <form action="PricingFinal.html">
+    <button class="button2">
+      Pricing
+    </button>
+  </form>
+  <form action="teampageFinal.html">
+    <button class="button2">
+      Team
+    </button>
+  </form>
+  <form action="signupFinal.html">
+    <button class="button2">
+      Sign Up
+    </button>
+  </form>
+</center>
+
+<style>
   @import 'https://fonts.googleapis.com/css?family=Pavanam';
-  body{
-  /*background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);*/
-    background-color: #466995;
-font-family: 'Pavanam', sans-serif;
-}
-
-h1{
-  element.style {
-}
-a:-webkit-any-link {
-    color: -webkit-link;
-    text-decoration: none;
-    cursor: auto;
-}
-}
-  html
-    {font-family: 'Pavanam', sans-serif;}
-  a:-webkit-any-link {
-    color: white;
-    text-decoration: none;
-    cursor: auto;
-    font-family: 'Pavanam', sans-serif;
-}
-}
-  h1{
-
-    margin-bottom: 0px;
-    margin-top: 0px;
-    background-color: #333;
-    font-family: 'Pavanam', sans-serif;
-
-  }
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #A4B0F5;
-}
-
-li {
-    float: right;
-}
-
-li a {
-    display: inline-block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #466995;
-}
 </style>
-</head>
-<body>
-
-<ul>
-  <li><a href="signup.html">Sign Up</a></li>
-  <li><a href="Features.html">Features</a></li>
-  <li><a href="Pricing.html">Pricing</a></li>
-  <li><a href="teampage.html">Team</a></li>
-  <li><a href="index.html">Home</a></li>
-</ul>
-<link rel="stylesheet" type="text/css" href="index.css">
-<div class="relative">
-  uConnect
-</div>
-<div class="relative2">
-  A new way to connect
-</div>
-<a href="Features.html">
-  <img src="Homepage.png" alt="Beautiful Picture" style="width: 1275px;height: 550px">
-</a>
 </body>
 </html>
