LAST MINUTE LINK REDIRECTION Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/teampageFinal.html
+++ b/teampageFinal.html
@@ -6,6 +6,64 @@
 	</title>
 </head>
 <body>
-
+<link rel="stylesheet" type="text/css" href="teampageFinal.css">
+	<head>
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
+<form action="index.html">
+		<button class="button">
+			<input type = "image" src="Logomakr_5eYYlX.png" style="width: 180px; height: 70px">
+		</button>
+	</form>
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+</head>
+<ul>
+  <li><a href="signupFinal.html">Sign Up</a></li>
+  <li><a href="FeaturesFinal.html">Features</a></li>
+  <li><a href="PricingFinal.html">Pricing</a></li>
+  <li><a href="teampageFinal.html">Team</a></li>
+  <li><a href="index.html">Home</a></li>
+</ul>
+<center>	
+	<h1>
+		Our Team
+		<br>
+		<br>
+	</h1>
+</center>
+<center>
+	<div class="wrapper">
+		<!-- <table> -->
+    		<img id="slide" src="chantale.png">
+    	<!-- </table> -->
+    	<br>
+	</div>
+	<div class="wrapper2">
+		<!-- <table> -->
+    		<img id="slide" src="tiler.png" >
+    	<!-- </table> -->
+    	<br>
+	</div>
+	<div class="wrapper3">
+		<!-- <table> -->
+    		<img id="slide" src="sherri.png" >
+    	<!-- </table> -->
+    	<br>
+	</div>
+	<div class="wrapper4">
+		<!-- <table> -->
+    		<img id="slide" src="ury.png" >
+    	<!-- </table> -->
+    	<br>
+	</div>
+	<div class="wrapper5">
+		<!-- <table> -->
+    		<img id="slide" src="chrys.png" >
+    	<!-- </table> -->
+    	<br>
+	</div>
+</center>
+<style>
+@import 'https://fonts.googleapis.com/css?family=Pavanam';
+</style>
 </body>
 </html>
