--- a/signupFinal.html
+++ b/signupFinal.html
@@ -6,6 +6,7 @@
 	</title>
 </head>
 <body>
+<link rel="stylesheet" type="text/css" href="signupFinal.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
 	<head>
 		<form action="index.html">
@@ -15,11 +16,11 @@
 		</form>
 	</head>
 	<ul>
-		<li><a href="signup.html">Sign Up</a></li>
-		<li><a href="Features.html">Features</a></li>
-		<li><a href="Pricing.html">Pricing</a></li>
-		<li><a href="teampage.html">Team</a></li>
-		<li><a href="Home.html">Home</a></li>
+		<li><a href="signupFinal.html">Sign Up</a></li>
+		<li><a href="FeaturesFinal.html">Features</a></li>
+		<li><a href="PricingFinal.html">Pricing</a></li>
+		<li><a href="teampageFinal.html">Team</a></li>
+		<li><a href="index.html">Home</a></li>
 	</ul>
 	<center>
 		<h1>
