last minute change Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signuptest.html
+++ b/signuptest.html
@@ -10,11 +10,11 @@
 		</form>
 	</head>
 	<ul>
-		<li><a href="signup.html">Sign Up</a></li>
-		<li><a href="Features.html">Features</a></li>
-		<li><a href="Pricing.html">Pricing</a></li>
-		<li><a href="teampage.html">Team</a></li>
-		<li><a href="Home.html">Home</a></li>
+		<li><a href="signupFinal.html">Sign Up</a></li>
+		<li><a href="FeaturesFinal.html">Features</a></li>
+		<li><a href="PricingFinal.html">Pricing</a></li>
+		<li><a href="teampageFinal.html">Team</a></li>
+		<li><a href="index.html">Home</a></li>
 	</ul>
 	<center>
 		<h1>
