Signed-off-by: tyler <tyler>zzzz

--- a/teampageFinal.html
+++ b/teampageFinal.html
@@ -15,6 +15,13 @@
 		</button>
 	</form>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script>
+		document.getElementById(chantale.png).src=chantale.png
+		document.getElementById(tiler.png).src=tiler.png
+		document.getElementById(sherri.png).src=sherri.png
+		document.getElementById(chrys.png).src=chrys.png
+		document.getElementById(ury.png).src=ury.png
+	</script>
 </head>
 <ul>
   <li><a href="signupFinal.html">Sign Up</a></li>
